--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colormerah"
+    android:background="@color/colorTab2"
     tools:context=".MainActivity">
 
 
@@ -156,7 +156,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
-                android:backgroundTint="@color/colorTab2"
+                android:backgroundTint="@color/colorPrimary"
                 android:textColor="#ffffff"
                 android:text="Logout" />
         </RelativeLayout>
