--- a/app/src/main/res/layout/activity_form_data_pemesan.xml
+++ b/app/src/main/res/layout/activity_form_data_pemesan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colormerah"
+    android:background="@color/colorTab2"
     tools:context=".FormDataPemesan">
 
     <RelativeLayout
@@ -149,7 +149,7 @@
                     android:inputType="none"
                     android:editable="false"
                     android:focusableInTouchMode="false"
-                    android:hint="@string/hint_tanggalbooking"
+                    android:hint="@string/hint_tanggalpesan"
                     />
 
 
@@ -202,9 +202,32 @@
                 android:layout_height="wrap_content"
                 android:text="Rp0"
                 android:textStyle="italic|bold"
-                android:paddingBottom="50dp"
                 android:textColor="@color/colormerah"
                 android:textSize="21sp"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/text_input_keterangan"
+                android:paddingBottom="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/txtketerangan"
+                    android:layout_width="300dp"
+                    android:layout_height="43dp"
+                    android:layout_below="@+id/imageView"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:ems="10"
+                    android:hint="@string/hint_keterangan"
+                    android:inputType="text"
+
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/colorBlack"
+                    android:textColorHint="@color/colorAbuabu"
+                    android:textSize="20dp"/>
+            </android.support.design.widget.TextInputLayout>
+
+
 
 
             <Button
