--- a/app/src/main/res/layout/activity_form_pembayaran.xml
+++ b/app/src/main/res/layout/activity_form_pembayaran.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colormerah"
+    android:background="@color/colorTab2"
     tools:context=".FormPembayaran">
 
 
@@ -190,7 +190,7 @@
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/bankbri" />
+                            android:src="@drawable/bankmandiri1" />
 
                         <TextView
                             android:id="@+id/annama"
@@ -198,7 +198,7 @@
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@+id/imagebankbari"
                             android:layout_toRightOf="@+id/imagebankbari"
-                            android:text="A/N INDRIYANTO NUGROHO"
+                            android:text="A/N ACH CHANIF AZZAHARY"
                             android:textAlignment="center"
                             android:paddingTop="15dp"
                             android:textColor="@android:color/black"
@@ -211,7 +211,7 @@
                             android:layout_below="@+id/annama"
                             android:layout_toEndOf="@+id/imagebankbari"
                             android:layout_toRightOf="@+id/imagebankbari"
-                            android:text="146601003158508"
+                            android:text="9000017135139"
                             android:textIsSelectable="true"
                             android:textAlignment="center"
                             android:paddingTop="5dp"
@@ -236,7 +236,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="15dp"
                 android:layout_marginBottom="10dp"
-                android:background="@color/colorTab2"
+                android:background="@color/colorPrimary"
                 android:elevation="10dp"
                 android:paddingLeft="40dp"
                 android:layout_centerHorizontal="true"
@@ -252,16 +252,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="10dp"
-                android:textColorHint="@color/colorPutih"
+                android:textColorHint="@color/colorBlack"
                 android:layout_below="@+id/btnregister"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:background="@color/colormerah"
+                android:background="@color/colorPutih"
                 android:paddingLeft="80dp"
                 android:paddingRight="80dp"
                 android:text="Kembali Beranda"
                 android:textSize="13dp"
-                android:textColor="@color/colorPutih"
+                android:textColor="@color/colorBlack"
                 android:textStyle="bold" />
 
 
