--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorTab2"
     android:layout_height="match_parent"
-    android:background="@color/colormerah"
+
     tools:context=".Login">
 
     <ImageView
@@ -56,7 +57,7 @@
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColor="@color/colorBlack"
-                android:textColorHint="@color/colorAbuabu"
+                android:textColorHint="@color/colorBlack"
                 android:textSize="17sp"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -96,7 +97,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="15dp"
-        android:background="@color/colorTab2"
+        android:background="@color/colorPrimary"
         android:elevation="10dp"
         android:paddingLeft="90dp"
         android:paddingRight="90dp"
@@ -113,7 +114,7 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginTop="13dp"
-        android:background="@color/colormerah"
+        android:background="@color/colorPutih"
         android:padding="4dp"
         android:paddingLeft="90dp"
         android:paddingRight="90dp"
